--- a/controlFlow/control_flow.html
+++ b/controlFlow/control_flow.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Variables con Alcance</title>
+    <title>Control Flow</title>
 </head>
 <body>
-    <h1>Laboratorio de Alcance para Var, Let y Const</h1>
-    </h1>
-    <script src="scope_lab.js"></script>
+        <h1>Control Flow and Conditional Statements</h1>
+    <script src="control_flow.js"></script>
 </body>
 </html>
